--- a/style.css
+++ b/style.css
@@ -12,8 +12,11 @@ p {
   font-size: 20px;
 }
 
-nav {
-  color: black;
-  font-family: comic sans;
-  font-size 30px;
+li {
+ float: left;
+}
+ a{ 
+   display:block;
+   padding: 8px;
+   background-color:lightslategray;
 }
